# alexa-skill-math

./: AGENTS.md  CONTRIBUTING.md  NOTICE  README.md
.ask/: ask-states.json
.github/workflows/: deploy.yml
lambda/: .gitignore  lambda_function.py  pyproject.toml
lambda/alexa/: data.py  interceptors.py  math_questions.py  models.py  persistence.py  srs.py  util.py
lambda/alexa/handlers/: __init__.py  helpers.py  launch.py  progress.py  quiz.py  settings.py  setup.py  standard.py
lambda/tests/: test_handlers.py  test_math_questions.py  test_models.py  test_persistence.py  test_srs.py
scripts/: README.md  create-dynamodb-table.sh  delete-dynamodb-table.sh  deploy-all.sh  deploy-lambda.sh  deploy-skill-metadata.sh  describe-dynamodb-table.sh  get-skill-status.sh
skill-package/: skill.json
skill-package/interactionModels/custom/: de-DE.json
