[project]
name = "alexa-skill-math"
version = "0.1.0"
description = "Alexa quiz skill using ASK Python SDK"
requires-python = ">=3.14"
dependencies = [
    "ask-sdk-core>=1.19.0,<2.0",
    "ask-sdk-dynamodb-persistence-adapter>=1.19.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "testcontainers>=4.13.3",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
